--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,12 @@
 
 @import url('https://fonts.googleapis.com/css?family=Fresca&display=swap');
 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body, button{
   font-family: 'fresca', sans-serif;
 }
